# nyc-taxi-data-platform

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
infra/k8s/airflow/: custom-values.yaml
infra/k8s/nessie/: nessie-service-nodeport.yaml  values.yaml
infra/k8s/postgresql/: cnpg-service-nodeport.yaml  values.yaml
infra/k8s/rustfs/: rustfs-service-nodeport.yaml  values.yaml
infra/k8s/spark/smoke-tests/iceberg-write-test-with-spark/: Dockerfile  README.md  iceberg_nessie.py  write_to_iceberg_sparkApplication.yaml
infra/k8s/spark/smoke-tests/submit-simple-sparkapp/: README.md  sparkApplication.yaml  spark_on_k8s_app.py
infra/k8s/spark/spark-operator/: README.md
infra/k8s/superset/: custom-values.yaml  superset-secrets.yaml
infra/k8s/trino/: values.yaml
orchestration/airflow/dags/: my_dag.py
